<resources>
    <string name="market">My Other Apps</string>
    <string name="oyla">Rate App</string>
    <string name="play_store_id">dogusumit</string>
    <string name="banner_ad_unit_id">ca-app-pub-4322301902835072/8462534600</string>

    <string name="app_name">Soft Keys - More Settings</string>
    <string name="aciklama">I would not want to bring you here, but i dont have authority to change settings :(</string>
    <string name="str1">\"Settings - Accessibility - Soft Keys - More Settings\" service should be on!</string>
    <string name="str2">Settings - Accessibility</string>
    <string name="str3">Vibration</string>
    <string name="str4">Recents</string>
    <string name="str5">Home</string>
    <string name="str6">Back</string>
    <string name="str7">Back Button on the left</string>
    <string name="str8">Orientation : </string>
    <string name="str9">Bar Height : </string>
    <string name="str10">Transparency : </string>
    <string name="str11">Location X : </string>
    <string name="str12">Location Y : </string>
    <string name="str13">Back Long Press</string>
    <string name="str14">Home Long Press</string>
    <string name="str15">Recents Long Press</string>
    <string name="str16">Background Color</string>
    <string name="str17">Back Icon</string>
    <string name="str18">Home Icon</string>
    <string name="str19">Recents Icon</string>
    <string name="str20">Bar Width : </string>
    <string name="str21">Touch to show keys</string>
    <string name="str23">Choose</string>
    <string name="str24">0</string>
    <string name="str25">&#8230;</string>
    <string name="str26">Keys Height : </string>
    <string name="str27">Keys Width : </string>
    <string name="str28">Cancel</string>

    <string-array name="spiner_icin">
        <item>Horizontal</item>
        <item>Vertical</item>
    </string-array>
    <string-array name="spiner_icin2">
        <item>null</item>
        <item>Open App</item>
        <item>Hide Soft Keys</item>
        <item>Mute Phone</item>
    </string-array>
    <string-array name="spiner_icin3">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="spiner_icin4">
        <item>Old Icon</item>
        <item>New Icon</item>
        <item>New Icon 2</item>
        <item>Custom Image</item>
    </string-array>
    <string name="title_activity_picker">ActivityPicker</string>
</resources>